# PPSSaveEditor

./: .gitignore  APK_BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  EMULATOR_TEST_GUIDE.md  FILE_LIST.txt  FINAL_SUMMARY.md  FIX_BUILD.md  GET_APK.md  PPSSaveEditor.spec  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  README.md  build.gradle  build_apk.py  build_apk_now.bat  build_docker.bat  build_p4a.py  build_windows.bat  demo.py  example_cheat_codes.txt  gradlew.bat  gui_editor.py  psp_save_editor.py  psp_save_editor_README.md  pyproject.toml  settings.gradle  setup_and_build.bat  test_editor.py  upload_to_github.bat  打包成EXE.bat  查看错误.bat  立即构建APK.bat  错误排查指南.md
.github/workflows/: build_apk.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ppssaveeditor/: CheatCodeActivity.kt  CheatCodeApplier.kt  HexEditorActivity.kt  HexEditorAdapter.kt  MainActivity.kt  SFOParser.kt  SaveDataCrypto.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: dialog_modify_value.xml  item_hex_row.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile_app/: README.md  buildozer.spec  main.py
